Bug 77029 - MC 6 does not rewrite local-xmpp, etc., accounts' protocols to local_xmpp
Summary: MC 6 does not rewrite local-xmpp, etc., accounts' protocols to local_xmpp
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: mission-control (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Simon McVittie
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks: 68660
  Show dependency treegraph
 
Reported: 2014-04-03 20:01 UTC by Simon McVittie
Modified: 2014-04-08 19:17 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Simon McVittie 2014-04-03 20:01:18 UTC
When MC 6 imports a Telepathy0 account, it should rewrite its protocol by applying tr/-/_/. I have a patch but I haven't tested it yet.
Comment 1 Simon McVittie 2014-04-07 17:09:40 UTC
(In reply to comment #0)
> I have a patch but I haven't tested it yet.

It seems fine. http://cgit.freedesktop.org/~smcv/telepathy-mission-control/log?h=next-local-xmpp
Comment 2 Xavier Claessens 2014-04-08 19:08:49 UTC
+1 for 81d463219433e18b2c34ed19a1faf50642f0aa05 but I didn't look at what's before it.
Comment 3 Simon McVittie 2014-04-08 19:17:21 UTC
Fixed in git for 0.99.11, thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.