Rewrite the protocol name for local-xmpp accounts created by Telepathy1

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=77029
Reviewed-by: Xavier Claessens